# KMemory

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.ps1  clean.ps1  config_cmake.ps1  debug.ps1  kmemory.h  main.c  run.ps1
kmm/: kmemory.h
kmm/src/: platform.h  utils.h
kmm/src/platform/: unix.h  win32.h
